--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
                         <a target="_blank" href="https://oxygen-port-availability.herokuapp.com/"><img src="assets/img/project-4.png" alt=""></a>
                         
                     </div>
-                    <!-- <div class="work__img">
-                        <a target="_blank" href="                               "><img src="assets/img/project-5.png" alt=""></a>
-                    </div> -->
+                    <div class="work__img">
+                        <a target="_blank" href="https://erp.sathyabama.ac.in/account/login?returnUrl=%2F"><img src="assets/img/project-5.png" alt=""></a>
+                    </div>
                 </div>
             </section>
 
