Updated Policy/Privacy Page and Added Deletion account

--- a/index.html
+++ b/index.html
@@ -245,53 +245,44 @@
             </section>
         </main>
 
-<!--===== DELETE ACCOUNT SECTION =====-->
-<section class="delete-account section" id="delete-account">
-    <div class="delete-account__container bd-grid">
-        <div class="delete-account__logo-container">
-            <img src="./assets/img/connect-logo-mark.png" alt="Connect App Logo" class="delete-account__logo">
-            <h3 class="delete-account__app-name">UTA - Connect App</h3>
+    <!--===== DELETE ACCOUNT SECTION =====-->
+    <section class="delete-account section" id="delete-account">
+        <div class="delete-account__container bd-grid">
+            <div class="delete-account__logo-container">
+                <img src="./assets/img/connect-logo-mark.png" alt="Connect App Logo" class="delete-account__logo">
+                <h3 class="delete-account__app-name">UTA - Connect App</h3>
+            </div>
+    
+            <div class="delete-account__form-container">
+                <h2 class="delete-account__title">Account Deletion Request</h2>
+                <form action="https://formsubmit.co/sr.sujeeth21@gmail.com" method="POST" class="delete-account__form"
+                    id="delete-account-form">
+                    <input type="hidden" name="_subject" value="Account Deletion Request">
+                    <input type="email" name="email" placeholder="Your Email" class="delete-account__input" required>
+                    <textarea name="reason" placeholder="Reason for deletion" class="delete-account__input"
+                        required></textarea>
+                    <input type="submit" value="Request Deletion" class="delete-account__button">
+                    <input type="hidden" name="_autoresponse"
+                        value="Your account deletion request has been received and will be processed.">
+                    <input type="hidden" name="_captcha" value="false">
+                </form>
+            </div>
         </div>
+    </section>
+    
+    <script>
+        document.getElementById('delete-account-form').addEventListener('submit', function (e) {
+            // Uncomment the next line if you need to perform any checks before submission
+            // e.preventDefault();
 
-        <div class="delete-account__form-container">
-            <h2 class="delete-account__title">Account Deletion Request</h2>
-            <form action="https://formsubmit.co/sr.sujeeth21@gmail.com" method="POST" class="delete-account__form"
-                id="delete-account-form">
-                <input type="hidden" name="_subject" value="Account Deletion Request">
-                <input type="email" name="email" placeholder="Your Email" class="delete-account__input"
-                    pattern=".+@mavs\.uta\.edu" title="Please use your MAVS UTA email." required>
-                <textarea name="reason" placeholder="Reason for deletion" class="delete-account__input"
-                    required></textarea>
-                <input type="submit" value="Request Deletion" class="delete-account__button">
-                <input type="hidden" name="_autoresponse"
-                    value="Your account deletion request has been received and will be processed.">
-                <input type="text" name="_honey" style="display:none">
-                <input type="hidden" name="_captcha" value="false">
-            </form>
-        </div>
-    </div>
-</section>
-
-<script>
-    document.getElementById('delete-account-form').addEventListener('submit', function (e) {
-        e.preventDefault();
-
-        // This is where you'd add the client-side email verification code.
-        // For illustration, we're using a mock function to simulate the process.
-        verifyEmail(this);
-    });
-
-    function verifyEmail(form) {
-        var email = form.querySelector('input[name="email"]').value;
-
-        // Here you'd typically make an AJAX call to your server to handle the email verification.
-        // Since we can't actually send emails from HTML/JavaScript alone, this is a placeholder.
-        console.log('Verification email would be sent to:', email);
-
-        // Inform the user that a verification email has been "sent".
-        alert('A verification email has been sent to ' + email + '. Please check your inbox to confirm.');
-    }
-</script>
+            // Example: validation or logging
+            var email = this.querySelector('input[name="email"]').value;
+            if (!email.includes('@')) {
+                alert('Please enter a valid email address.');
+                e.preventDefault(); // Prevent form submission if the email is not valid
+            }
+        });
+    </script>
 
 <!--===== FOOTER =====-->
 <footer class="footer">
